# hse_mlops_2022

./: .gitignore  pyproject.toml
hw1/: README.md
hw1/mlops_hw1/: app.py  models.py
hw1/mlops_hw1/grpc/: grpc.proto  grpc_pb2.py  service.py
hw2/: .dockerignore  README.md  config.yaml  docker-compose.yml  models.py  pyproject.toml
hw2/grpc_app/: app.py
hw2/tests/: grpc_tests.py
hw2/web_app/: app.py
hw3/: README.md  models.py  pyproject.toml
hw3/grpc_app/: Dockerfile  grpc_pb2_grpc.py  service.py
hw3/tests/: test_modelClass.py
hw3/web_app/: Dockerfile
mlops_hw1/: app.py
mlops_hw1/grpc/: models.py  service.py
