[tool.poetry]
name = "mlops-hw1"
version = "0.1.0"
description = ""
authors = ["Ilya Popov <ilpopov@ozon.ru>"]
readme = "README.md"
packages = [{include = "mlops_hw1"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "2.1.2"
flask-restx = "^0.5.1"
Werkzeug = "2.1.2"
pandas = "^1.5.0"
sklearn = "^0.0"
xgboost = "^1.6.2"
grpcio = "^1.49.1"
grpcio-tools = "^1.49.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
